--- a/themes/material/css/style.css
+++ b/themes/material/css/style.css
@@ -1,3 +1,57 @@
 body{
     padding-top: 70px;
 }
+#both{
+    animation-delay: 1s;
+    -webkit-animation-delay: 1;
+    -moz-animation-delay: 1s;
+    transition-delay: 1s;
+    -webkit-transition-delay: 1s;
+    -moz-transition-delay: 1s;
+}
+
+#info{
+    animation-delay: 1s;
+    -webkit-animation-delay: 1s;
+    -moz-animation-delay: 1s;
+    transition-delay: 1s;
+    -webkit-transition-delay: 1s;
+    -moz-transition-delay: 1s;
+}
+
+.img_news{
+    width: 120px;
+}
+
+#box-lastnews{
+    background: #FFF;
+    box-shadow: 0 5px 15px 0 rgba(0,0,0,0.25);
+}
+
+.font_news a:hover{
+    color: #999999;
+    text-decoration: none;
+    font-size: 12px;
+}
+
+.blog-date {
+    background-color: green;
+    padding: 5px 10.5px 10px 12.5px;
+    position: absolute;
+    text-align: center;
+    top: 0;
+}
+.day {
+    color: #FFFFFF;
+    font-size: 30px;
+    font-weight: 900;
+    line-height: 44px;
+    margin: 0 0 0 2px;
+    font-weight: 800;
+}
+.monthyear {
+    color: #FFFFFF;
+    font-size: 12px;
+    line-height: 13px;
+    margin: 2px 0 0;
+}
